# RPC-LIB

./: .flake8  .gitignore  .pre-commit-config.yaml  Calculadora.py  Calculadora_Interface.py  README.md  Rpc_Client.py  Rpc_Client_Binder.py  Rpc_Client_Stub.py  Rpc_Exceptions.py  Rpc_Serializer.py  Rpc_Server.py  Rpc_Server_Binder.py  Rpc_Server_Stub.py  Rpc_Stub_Generator.py  gitignore  pyproject.toml  requirements.txt
.github/workflows/:  continuous-integration.yaml  build.yaml  release.yaml  release.yml
docs/release-notes/: v0.0.0.md
docs/tech-documentation/: tech-doc-v0.0.0.md
example/: Rpc_Client.py  Rpc_Server.py  calc_rpc_client_stub.py  calc_rpc_server_stub.py
interface/: Rpc_Client_Binder_Interface.py  Rpc_Client_Stub_Interface.py  Rpc_Serializer_Interface.py  Rpc_Server_Binder_Interface.py  Rpc_Server_Sub_Interface.py
src/: __init__.py  srpc_exceptions.py  srpc_gen.py  srpc_show_metrics.py
src/binder/: srpc_client_binder.py  srpc_server_binder.py
src/interface/: srpc_client_binder_interface.py  srpc_client_stub_interface.py  srpc_metrics_interface.py  srpc_serializer_interface.py  srpc_server_binder_interface.py  srpc_server_stub_interface.py
src/metrics/: srpc_metric.py  srpc_metrics_types.py
src/stub_generator/: srpc_client_stub_gen.py  srpc_server_stub_gen.py  srpc_stub_utils.py
src/util/: srpc_serializer.py
src/utils/: srpc_serializer.py
srpcLib/: srpc_show_metrics.py  srpc_stub_gen.py
srpcLib/binder/: srpc_client_binder.py  srpc_server_binder.py
srpcLib/interface/: srpc_metrics_interface.py
srpcLib/metrics/: srpc_metric.py
srpcLib/stub_generator/: srpc_client_stub_gen.py  srpc_server_stub_gen.py
srpcLib/tools/: srpc_show_metrics.py  (+1 more)
tests/: __init__.py  conftest.py  test_srpc_stub_utils.py
(+26 files in other folders)
