[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rpc-lib"
version = "0.1.0"
description = "SRPC is a lightweight Remote Procedure Call (RPC) library."
authors = [{ name="Oseas Andre", email="oseasandrepro@gmail.com" }]
dependencies = ["pytest>=8.4.1"]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
  \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 )/
'''