[project]
name = "srpcLib"
version = "0.0.0"
description = "SRPC is a lightweight Remote Procedure Call (RPC) library."
authors = [{ name="Oseas Andre", email="oseasandrepro@gmail.com" }]
dependencies = ["pytest>=8.4.1"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
srpc-stub-gen = "srpcLib.tools.srpc_stub_gen:main"
srpc-show-metrics = "srpcLib.tools.srpc_show_metrics:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["srpcLib*"]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
  \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 )/
'''